@@ -6,26 +6,30 @@ import mx.gob.pjpuebla.trials.core.personas.Persona;
 import mx.gob.pjpuebla.trials.core.personas.PersonaService;
 import mx.gob.pjpuebla.trials.error.NotFoundException;
 import mx.gob.pjpuebla.trials.util.enums.*;
+import mx.gob.pjpuebla.trials.util.enums.carpeta.*;
 import mx.gob.pjpuebla.trials.workflow.anexos.Anexo;
 import mx.gob.pjpuebla.trials.workflow.anexos.AnexoBandejaRecepcionRecord;
 import mx.gob.pjpuebla.trials.workflow.anexos.AnexoRepository;
 import mx.gob.pjpuebla.trials.workflow.carpeta.records.ApelacionRecordResponse;
 import mx.gob.pjpuebla.trials.workflow.carpeta.records.BandejaRecepcionRecord;
+import mx.gob.pjpuebla.trials.workflow.carpeta.records.CarpetaCatalogoRecord;
 import mx.gob.pjpuebla.trials.workflow.carpeta.records.CarpetaResponseRecord;
 import mx.gob.pjpuebla.trials.workflow.documentos.Documento;
 import mx.gob.pjpuebla.trials.workflow.documentos.DocumentoRepository;
+import mx.gob.pjpuebla.trials.workflow.documentos.records.DocumentoRecepcionMovimientosRecord;
 import mx.gob.pjpuebla.trials.workflow.documentos.records.DocumentoRecord;
+import mx.gob.pjpuebla.trials.workflow.movimientos.MovimientoRepository;
 import mx.gob.pjpuebla.trials.workflow.movimientos.MovimientoService;
 import mx.gob.pjpuebla.trials.workflow.personasdocumentos.PersonaDocumentoRecord;
 import mx.gob.pjpuebla.trials.workflow.personasdocumentos.PersonaDocumentoRepository;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Transactional
 @RequiredArgsConstructor
@@ -38,6 +42,7 @@ public class CarpetaService {
     private final AnexoRepository anexoRepository;
     private final PersonaService personaService;
     private final MovimientoService movimientoService;
+    private final MovimientoRepository movimientoRepository;
 
     public CarpetaResponseRecord getCarpetaResponseByNumExpYearJuzgado(String expediente, Integer juzgadoId) {
         // Usar una variable auxiliar para la modificación de juzgadoId
@@ -98,17 +103,19 @@ public class CarpetaService {
                 anexos);
     }
 
-    public DocumentoRecord actualizarInformacionAnexos(List<AnexoBandejaRecepcionRecord> anexos,
-            Integer documentoId) {
+    public DocumentoRecord actualizarInformacionAnexos(
+            DocumentoRecepcionMovimientosRecord docRecepcionMovimientosRecord,
+            Integer documentoId
+    ) {
         Documento documento = validacionBandejaRecepcion(documentoId);
 
-        List<String> anexosFaltantes = anexos.stream()
+        List<String> anexosFaltantes = docRecepcionMovimientosRecord.anexos().stream()
                 .filter(anexo -> anexo.estado() == EstadoAnexo.NORECIBIDO)
                 .map(AnexoBandejaRecepcionRecord::nombre)
-                .collect(Collectors.toList());
+                .toList();
 
         // actualizamos los anexos.
-        for (AnexoBandejaRecepcionRecord anexo : anexos) {
+        for (AnexoBandejaRecepcionRecord anexo : docRecepcionMovimientosRecord.anexos()) {
             Anexo anexoTemp = anexoRepository.findById(anexo.id()).orElseThrow(
                     () -> new NotFoundException("No se encontró el anexo con id: " + anexo.id(), "anexoId"));
             anexoTemp.setEstado(anexo.estado());
@@ -119,16 +126,24 @@ public class CarpetaService {
 
         // actualizamos el estatus en carpeta o documento dependiendo de si es demanda,
         // exhorto o promoción.
-        if (documento.getTipoDocumento() == TipoDocumento.PROMOCION) {
-            documento.setEstatus(EstadoCarpeta.ASIGNADO);
-        }
-
-        if (documento.getCarpeta() != null && (documento.getCarpeta().getTipoCarpeta() == TipoCarpeta.DEMANDA
-                || documento.getCarpeta().getTipoCarpeta() == TipoCarpeta.EXHORTO)) {
+        if (documento.getTipoDocumento() == null && documento.getCarpeta() != null && (
+                documento.getCarpeta().getTipoCarpeta() == TipoCarpeta.DEMANDA
+                || documento.getCarpeta().getTipoCarpeta() == TipoCarpeta.EXHORTO)
+        )
             documento.getCarpeta().setEstatus(EstadoCarpeta.ASIGNADO);
-        }
+        else if (documento.getTipoDocumento() != null && (documento.getTipoDocumento() == TipoDocumento.PROMOCION))
+            documento.setEstatus(EstadoCarpeta.ASIGNADO);
 
-        documentoRepository.save(documento);
+        documento = documentoRepository.save(documento);
+
+        //Crear movimiento
+        movimientoService.createMovimentoWithObservaciones(
+                (documento.getTipoDocumento() == null) ? documento.getCarpeta() : null,
+                (documento.getTipoDocumento() == null) ? null : documento,
+                EstadoCarpeta.ASIGNADO.name(),
+                docRecepcionMovimientosRecord.observaciones(),
+                docRecepcionMovimientosRecord.recomendaciones()
+        );
 
         return new DocumentoRecord(documento.getId(), documento.getCarpeta().getFolio(),
                 documento.getCarpeta().getTipoCarpeta());
@@ -160,8 +175,44 @@ public class CarpetaService {
         }
         String concatenatedAnexos = String.join(", ", anexos);
         String motivo = "Hacen falta los siguientes anexos: " + concatenatedAnexos + ". Por favor validar.";
-
-        movimientoService.createMovimento(documento.getCarpeta(), documento, personaService.getAuditor(), motivo);
+        movimientoService.createMovimento((documento.getTipoDocumento() == null ? documento.getCarpeta() : null), (documento.getTipoDocumento() == null) ? null : documento, personaService.getAuditor(), motivo);
     }
+
+    public List<CarpetaCatalogoRecord> getCatalogoList(String catalogo) {
+        return switch (catalogo) {
+            case "catalogoCondicionMigratoria" -> Arrays.stream(CatalogoCondicionMigratoria.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoDeterminacionJurisdiccional" -> Arrays.stream(CatalogoDeterminacionJurisdiccional.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoTiposDomicilio" -> Arrays.stream(CatalogoTiposDomicilio.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoGrupoVulnerable" -> Arrays.stream(CatalogoGrupoVulnerable.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoProfesionOficio" -> Arrays.stream(CatalogoProfesionOficio.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoFrecuenciaIngreso" -> Arrays.stream(CatalogoFrecuenciaIngreso.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoTipoDefensor" -> Arrays.stream(CatalogoTipoDefensor.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoIngresoMensualNeto" -> Arrays.stream(CatalogoIngresoMensualNeto.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoEstadoCivil" -> Arrays.stream(CatalogoEstadoCivil.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            case "catalogoDiscapacidades" -> Arrays.stream(CatalogoDiscapacidades.values())
+                    .map(e -> new CarpetaCatalogoRecord(e.name(), e.getEtiqueta()))
+                    .toList();
+            default -> Collections.emptyList();
+        };
+    }
+
 
 }
